+ trainer api updates
