# Backend/static/swagger.json
@@ -10,20 +10,24 @@
       "description": "Login and register APIs"
     },
     {
-      "name": "Routine",
-      "description": "Routine APIs"
+      "name": "Client",
+      "description": "Client APIs"
+    },
+    {
+      "name": "Trainer",
+      "description": "Trainer APIs"
     },
     {
       "name": "Exercise",
       "description": "Exercise APIs"
     },
     {
-      "name": "Diet",
-      "description": "Diet APIs"
+      "name": "Routine",
+      "description": "Routine APIs"
     },
     {
-      "name": "Trainer",
-      "description": "Trainer APIs"
+      "name": "Diet",
+      "description": "Diet APIs"
     }
   ],
   "paths": {
@@ -633,7 +637,7 @@
             "name": "trainerEmail",
             "in": "query",
             "description": "Trainer's email",
-            "required": true,
+            "required": false,
             "type": "string"
           }
         ],
@@ -709,16 +713,10 @@
             }
           },
           "400": {
-            "description": "Bad Request",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
+            "description": "Bad Request"
           },
           "500": {
-            "description": "Internal Server Error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
+            "description": "Internal Server Error"
           }
         }
       }
@@ -1049,7 +1047,7 @@
     "TrainerUpdate": {
       "type": "object",
       "properties": {
-        "trainerEmail": {
+        "email": {
           "type": "string",
           "description": "Trainer's email address"
         },
